--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple NodeJs project that supports withdrawals, deposits and transfers among bank accounts.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test":  "PG_USER=postgres PG_DATABASE=postgres PG_PORT=5432 NODE_OPTIONS=--experimental-vm-modules jest --coverage=true -i"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,11 @@
   "devDependencies": {
     "jest": "^27.5.1"
   },
-  "type": "module"
+  "type": "module",
+  "jest": {
+    "testMatch": [
+      "**/test/**/**.js"
+    ],
+    "testTimeout": 60000
+  }
 }
