Refactor launcher module

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "simple-bank",
   "version": "1.0.0",
   "description": "A simple NodeJs project that supports withdrawals, deposits and transfers among bank accounts.",
-  "main": "index.js",
+  "main": "./src/launch.js",
   "scripts": {
-    "test":  "PG_USER=postgres PG_DATABASE=postgres PG_PORT=5432 NODE_OPTIONS=--experimental-vm-modules jest --coverage=true -i"
+    "test":  "PG_USER=postgres PG_DATABASE=postgres PG_PORT=5432 NODE_OPTIONS=--experimental-vm-modules jest --coverage=true -i",
+    "start": "node ./src/launch.js"
   },
   "repository": {
     "type": "git",
