--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./src/launch.js",
   "scripts": {
     "test":  "PG_USER=postgres PG_DATABASE=postgres PG_PORT=5432 NODE_OPTIONS=--experimental-vm-modules jest --coverage=true -i",
-    "start": "node ./src/launch.js"
+    "start": "node ./src/launch.js",
+    "test_without_env_vars": "NODE_OPTIONS=--experimental-vm-modules jest --coverage=true -i"
   },
   "repository": {
     "type": "git",
